Added Rita's image

--- a/index.html
+++ b/index.html
@@ -204,10 +204,8 @@
         <img src="images/JK_MRC_EMP.png" class="jek-logo">
 
         <p>
-
-        <h2>The Journey is the Reward</h2></p>
-
-        <p>Com a jeKnowledge os nossos associados não procuram receber dinheiro, preencher currículos, ou serem a nova estrela dos média. O nosso principal objetivo é aprender, e é durante o processo que isso acontece. Tudo o resto são subprodutos.</p>
+            <img src="images/rita.jpg">
+        </p>
 </div>
 
 <div id="div-hall-criativity" class="container">
