Description Rita's image

--- a/index.html
+++ b/index.html
@@ -201,10 +201,12 @@
 
 <div id="div-hall-journey" class="container">
     <a class="button b-close">x</a>
-        <img src="images/JK_MRC_EMP.png" class="jek-logo">
 
         <p>
             <img src="images/rita.jpg">
+        </p>
+        <p>
+            Rita a entrar na B3!
         </p>
 </div>
 
