Added Marcelino gif

--- a/index.html
+++ b/index.html
@@ -212,13 +212,12 @@
 
 <div id="div-hall-criativity" class="container">
     <a class="button b-close">x</a>
-        <img src="images/JK_MRC_EMP.png" class="jek-logo">
 
         <p>
 
-        <h2>Criativade e Inovação</h2></p>
+        <img src="images/mamma mia.gif">
 
-        <p>Para nós, fazer mais do mesmo não nos dá gozo. Nós gostamos de fazer diferente, seja completamente novo ou modificando algo que já existe. Toda a nossa cultura e estrutura organizacional está feita para fomentar ao máximo a criativade dos nossos associados, estando nós sempre abertos para discutir qualquer nova ideia.</p>
+        <p>Marcelino infiltrado no jantar de Eletro</p>
 </div>
 
 <div id="div-hall-integrity" class="container">
